chore: further native test arg fixes
Signed-off-by: Sam Gammon <sam@elide.ventures>